#87 #48 Add PUT /group/{id} endpoint and implement basic authorization logic
